# SpheroidalWaves.jl

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  Manifest.toml  Project.toml  README.md  build_output.txt  versions.js
.github/workflows/: CI.yml  Documentation.yml  UpdateArtifacts.yml
0.2.0/: .documenter-siteinfo.json  index.html  objects.inv  siteinfo.js
0.2.0/api/: index.html
0.2.0/backend-overrides/: index.html
0.2.0/math-and-usage/: index.html
0.2.1/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js  siteinfo.js
0.2.1/api/: index.html
0.2.1/backend-overrides/: index.html
0.2.1/math-and-usage/: index.html
0.2.2/: .documenter-siteinfo.json  index.html  objects.inv
0.2.2/api/: index.html
0.2.2/backend-overrides/: index.html
0.2.2/math-and-usage/: index.html
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
dev/api/: index.html
dev/backend-overrides/: index.html
dev/math-and-usage/: index.html
docs/: Project.toml  fortran-api-user-facing.md  make.jl  mathematical-basis-and-usage.md
docs/src/: api.md  backend-overrides.md  index.md  math-and-usage.md
scripts/: update_artifacts.jl
src/: SpheroidalWaveFunctions.jl  SpheroidalWaves.jl  eigenvalue_sweep.jl
test/: runtests.jl
v0.2.3/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
v0.2.3/api/: index.html
v0.2.3/backend-overrides/: index.html
v0.2.3/math-and-usage/: index.html
